--- a/deploy/deployment-dev.yaml
+++ b/deploy/deployment-dev.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: devopsdemo-service
+  namespace: dev
 spec:
   selector:
     app: devopsdemo-service
