--- a/deploy/deployment-dev.yaml
+++ b/deploy/deployment-dev.yaml
@@ -46,12 +46,13 @@ metadata:
   namespace: dev
 spec:
   rules:
-    - host: 159.69.8.105.xip.io
+    - host: testing.159.69.8.105.xip.io
       http:
         paths:
           - backend:
               serviceName: devopsdemo-service
               servicePort: 3000
+            path: /api/university
   tls:
     - hosts:
-        - 159.69.8.105.xip.io
+        - testing.159.69.8.105.xip.io
