--- a/deploy/deployment-prod.yaml
+++ b/deploy/deployment-prod.yaml
@@ -52,6 +52,7 @@ spec:
           - backend:
               serviceName: devopsdemo-service
               servicePort: 3000
+            path: /api/university
   tls:
     - hosts:
         - 159.69.8.105.xip.io
